# tinysvg

./: .editorconfig  .gitmodules  CMakeLists.txt  LICENSE  README.md  cpp.hint  tinysvg.vcxproj  tinysvg_test.vcxproj
src/: Config.h
src/common/: Convert..cpp  Convert.h  DOMString.h  DomString.cpp  DomString.h  Lambda.h
src/parser/: MiscParser.cpp  MiscParser.h  SVGDocumentParser.cpp  SVGDocumentParser.h  SvgDocumentParser.cpp  SvgDocumentParser.h
src/svg/: Color.cpp  Color.h  DOMString.cpp  DOMString.h  SVGBase.h  SVGCircle.cpp  SVGCircle.h  SVGColor.cpp  SVGColor.h  SVGLength.cpp  SVGLength.h  SVGLine.h  SVGPoint.cpp  SVGPoint.h  SVGPolyline.h  SVGRect.cpp  SVGRect.h  SVGSVG.h  SvgBase.cpp  SvgBase.h  SvgCircle.cpp  SvgCircle.h  SvgColor.cpp  SvgColor.h  SvgDocument.cpp  SvgDocument.h  SvgEllipse.cpp  SvgEllipse.h  SvgLine.cpp  SvgLine.h  SvgPolygon.h  SvgPolyline.cpp  SvgPolyline.h  SvgRect.h  SvgSvg.cpp  SvgSvg.h
test/: Config.h  Main.cpp  main.cpp
test/common/: DomStringTest.cpp
test/parser/: MiscParserTest.cpp  SvgDocumentParserTest.cpp
